[project]
name = "pyjt"
version = "0.0.1"
description="test automation for java UI applications from python"
authors = [
    { name="Claudio Klingler", email="ck@realtime-projects.com"}
]
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'jpype1',
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/realtimeprojects/pyjt"
"Bug Tracker" = "https://github.com/realtimeprojects/pyjt/issues"
